# wealthsense-ai

./: .env.example  .gitignore  MASTER_PLAN.md  README.md  STATUS.md  pyproject.toml  requirements.txt  run_all.sh
.github/workflows/: retrain.yml
artifacts/: forecasts.csv  metrics.json  strategy_results.csv
artifacts/data_cache/: AAPL_2015-01-01_2023-12-31.csv  AAPL_2015-01-01_2024-12-31.csv  AAPL_2015-01-01_2026-04-24.csv  AMZN_2015-01-01_2026-04-24.csv  GOOGL_2015-01-01_2024-12-31.csv  GOOGL_2015-01-01_2026-04-24.csv  META_2015-01-01_2024-12-31.csv  META_2015-01-01_2026-04-24.csv  MSFT_2015-01-01_2023-12-31.csv  MSFT_2015-01-01_2024-12-31.csv  MSFT_2015-01-01_2026-04-24.csv  NVDA_2015-01-01_2023-12-31.csv  NVDA_2015-01-01_2024-12-31.csv  NVDA_2015-01-01_2026-04-24.csv  QQQ_2015-01-01_2024-12-31.csv  QQQ_2015-01-01_2026-04-24.csv  SPY_2015-01-01_2023-12-31.csv  SPY_2015-01-01_2024-12-31.csv  SPY_2015-01-01_2026-04-24.csv  TSLA_2015-01-01_2023-12-31.csv  TSLA_2015-01-01_2026-04-24.csv  VOO_2015-01-01_2024-12-31.csv  VOO_2015-01-01_2026-04-24.csv
artifacts/models/: AAPL_gru.pt  AAPL_lstm.pt  AAPL_transformer.pt  AMZN_gru.pt  AMZN_lstm.pt  AMZN_transformer.pt  GOOGL_gru.pt  GOOGL_lstm.pt  GOOGL_transformer.pt  META_gru.pt  META_lstm.pt  META_transformer.pt  MSFT_gru.pt  MSFT_lstm.pt  MSFT_transformer.pt  NVDA_gru.pt  NVDA_lstm.pt  NVDA_transformer.pt  QQQ_gru.pt  QQQ_lstm.pt  QQQ_transformer.pt  (+9 more)
backend/: __init__.py  auth.py  coach.py  drift.py  main.py  schemas.py  services.py  storage.py
frontend/: package-lock.json  package.json
tests/: test_backend_api.py
(+28 files in other folders)
